projects/oblique/src/styles/scss/core/components/_form.scss
@use "../variables";

fieldset {
	min-width: 0;
	padding: 0;
	margin: 0;
	border: 0;

	+ fieldset {
		margin-top: variables.$ob-spacing-lg;
	}
}

legend {
	width: 100%;
	padding: 0;
	margin-bottom: variables.$ob-spacing-sm;
	border-bottom: variables.$ob-line-width-xs solid variables.$ob-gray-lighter;
	font-size: variables.$ob-font-size-bigger;
	font-weight: 600;
	line-height: inherit;
}

button {
	border-radius: 0; // macOS Chrome

	&:focus {
		// firefox
		outline: 1px dotted;
		outline: 5px auto -webkit-focus-ring-color;
	}

	&[disabled] {
		cursor: not-allowed !important;
	}
}

input,
button,
select,
optgroup,
textarea {
	margin: 0;
	font-family: inherit;
	font-size: inherit;
	line-height: inherit;

	&[disabled] {
		cursor: not-allowed !important;
	}
}

button,
input {
	overflow: visible; // Edge
}

button,
select {
	text-transform: none; // RFirefox
}

select {
	word-wrap: normal; // Safari
}

button,
[type="button"],
[type="reset"],
[type="submit"] {
	-webkit-appearance: button; // iOS, Safari, Android 4
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
	padding: 0;
	border-style: none;
}

input[type="date"],
input[type="time"],
input[type="datetime-local"],
input[type="month"] {
	// Remove the default appearance of temporal inputs to avoid a Mobile Safari
	// bug where setting a custom line-height prevents text from being vertically
	// centered within the input.
	// See https://bugs.webkit.org/show_bug.cgi?id=139848
	// and https://github.com/twbs/bootstrap/issues/11266
	-webkit-appearance: listbox;
}

textarea {
	resize: vertical;
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
	height: auto;
}

[type="search"] {
	outline-offset: -2px; // Safari.
	-webkit-appearance: none; // Safari.

	&::-ms-clear,
	&::-ms-reveal {
		display: none;
		width: 0;
		height: 0;
	}

	&::-webkit-search-decoration,
	&::-webkit-search-cancel-button,
	&::-webkit-search-results-button,
	&::-webkit-search-results-decoration {
		display: none;
	}
}

::-webkit-file-upload-button {
	font: inherit; // iOS Safari
	-webkit-appearance: button; // iOS Safari
}

.form-actions {
	text-align: right;
}

.ob-inline-form {
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
	column-gap: variables.$ob-spacing-default;
	word-break: normal;

	.mat-mdc-form-field {
		width: auto;
	}
}

